--- a/StockExchange.ipynb
+++ b/StockExchange.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "StockExchange.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtDSqQehcAiznhftdArVHG",
+      "authorship_tag": "ABX9TyPC/VHMmcqVzHH2/DFaqdgf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4002,6 +4002,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xGk76Ses4V21"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "430A_FBppt_r"
@@ -4016,7 +4025,7 @@
         "id": "r0JpJd2agLwT"
       },
       "source": [
-        "Predicting with LSTM models"
+        "#Model 1 - 1 LSTM layer + RELU activation function"
       ]
     },
     {
@@ -4146,12 +4155,12 @@
         "losses.plot()"
       ],
       "metadata": {
-        "id": "4zSkstF7RpBd",
-        "outputId": "3a5375b0-7e59-49ad-9498-9230f1028243",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "id": "4zSkstF7RpBd",
+        "outputId": "3a5375b0-7e59-49ad-9498-9230f1028243"
       },
       "execution_count": 280,
       "outputs": [
@@ -4229,12 +4238,12 @@
         "plt.legend(loc='upper left', fontsize=8)"
       ],
       "metadata": {
-        "id": "DDw5TJcxUvX2",
-        "outputId": "0a6ee850-c54e-4b06-f6b5-c427524ac139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "id": "DDw5TJcxUvX2",
+        "outputId": "0a6ee850-c54e-4b06-f6b5-c427524ac139"
       },
       "execution_count": 283,
       "outputs": [
@@ -4270,11 +4279,11 @@
         "print(\"mean_absolute_error: \", keras.metrics.mean_absolute_error(test.close[:20], forecast).numpy())"
       ],
       "metadata": {
-        "id": "YDLds0myWvS8",
-        "outputId": "16ec90d7-e847-4317-bcc8-91fac8b5ce9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YDLds0myWvS8",
+        "outputId": "16ec90d7-e847-4317-bcc8-91fac8b5ce9b"
       },
       "execution_count": 284,
       "outputs": [
@@ -4291,7 +4300,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Bidirectional LSTM"
+        "# Model 2 (2 Bidirectional LSTM layers)"
       ],
       "metadata": {
         "id": "t755j13KdxOJ"
@@ -4360,7 +4369,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#model 2\n",
+        "\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
@@ -4399,12 +4408,12 @@
         "losses.plot()"
       ],
       "metadata": {
-        "id": "MV3V_qaIeJ8w",
-        "outputId": "8392def0-1af9-4c2d-8da5-3b9819a0a45a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "id": "MV3V_qaIeJ8w",
+        "outputId": "8392def0-1af9-4c2d-8da5-3b9819a0a45a"
       },
       "execution_count": 303,
       "outputs": [
@@ -4465,12 +4474,12 @@
         "plt.legend(loc='upper left', fontsize=8)"
       ],
       "metadata": {
-        "id": "2MiFVfn1dtIA",
-        "outputId": "26ef914c-4579-431c-d2b7-fc893303a8ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 496
-        }
+        },
+        "id": "2MiFVfn1dtIA",
+        "outputId": "26ef914c-4579-431c-d2b7-fc893303a8ee"
       },
       "execution_count": 305,
       "outputs": [
@@ -4506,11 +4515,11 @@
         "print(\"mean_absolute_error: \", keras.metrics.mean_absolute_error(valid.close[:20], forecast).numpy())"
       ],
       "metadata": {
-        "id": "4TPvPiJtds8M",
-        "outputId": "32131cb0-1d4e-47d4-aa9f-4d5ecfb204bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4TPvPiJtds8M",
+        "outputId": "32131cb0-1d4e-47d4-aa9f-4d5ecfb204bc"
       },
       "execution_count": 306,
       "outputs": [
@@ -4525,9 +4534,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Model 3 (3 LSTM layers + Relu activation)"
+      ],
+      "metadata": {
+        "id": "1zwXTZq-3TFd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Model 3 ---the best LSTM Model for time series\n",
+        "\n",
         "\n",
         "from keras import Sequential\n",
         "from keras.layers import Dense, LSTM\n",
@@ -4562,12 +4580,12 @@
         "losses.plot()"
       ],
       "metadata": {
-        "id": "cshDOs-l1Co_",
-        "outputId": "07f64168-5b7c-46da-8b80-adfc9c8c578e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "cshDOs-l1Co_",
+        "outputId": "07f64168-5b7c-46da-8b80-adfc9c8c578e"
       },
       "execution_count": 310,
       "outputs": [
@@ -4638,12 +4656,12 @@
         "print(\"mean_absolute_error: \", keras.metrics.mean_absolute_error(valid.close[:20], forecast).numpy())"
       ],
       "metadata": {
-        "id": "iO3rmMEE0EjW",
-        "outputId": "64f942a2-c511-45a3-de14-9fc6598ee8be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 514
-        }
+        },
+        "id": "iO3rmMEE0EjW",
+        "outputId": "64f942a2-c511-45a3-de14-9fc6598ee8be"
       },
       "execution_count": 313,
       "outputs": [
@@ -4922,12 +4940,12 @@
         "losses.plot()"
       ],
       "metadata": {
-        "id": "E79-TTueX9lD",
-        "outputId": "54ba99be-95b4-4f54-e19c-393d0ab50700",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "id": "E79-TTueX9lD",
+        "outputId": "54ba99be-95b4-4f54-e19c-393d0ab50700"
       },
       "execution_count": 154,
       "outputs": [
